--- a/style.css
+++ b/style.css
@@ -2,6 +2,28 @@
   background: rgb(210, 168, 255);
 }
 
+@keyframes slideUp {
+  0% {
+    transform: translateY(100px);
+    opacity: 0.01;
+  }
+  100% {
+    transform: none;
+    opacity: 1;
+  }
+}
+
+@keyframes slideLeft {
+  0% {
+    transform: translateX(100px);
+    opacity: 0.01;
+  }
+  100% {
+    transform: none;
+    opacity: 1;
+  }
+}
+
 * {
   box-sizing: border-box;
 }
@@ -131,13 +153,14 @@ aside {
   aside {
     grid-column: 6/13;
     grid-row: 1;
-    overflow: auto;
     padding: 5vw;
+    overflow: auto;
   }
 }
 
 article {
   margin-bottom: 30px;
+  animation: 1s ease-in-out 0s 1 slideUp;
 }
 
 .❤️ {
@@ -185,6 +208,10 @@ article {
 
 .button:hover .button-icon {
   display: none;
+}
+
+.projects {
+  animation: 1s ease-in-out 0s 1 slideUp;
 }
 
 .project {
